* Add wildcard `*` tagName processing to the `RE_SIMPLE_SELECTOR` regexp for non-IE browsers. [Diego Perini]

* Add `context` fallback to byClass(). [Diego Perini]

* Fix `of-type` selectors when no context is given by removing the `indexesByTag` cache. [Diego Perini]

* Make `RE_BUGGY_QSAPI` filter out selectors that cause IE to throw errors. [jddalton]

* Fix a bug in the compiler for a selector like `.a1 ~ *` throwing an error when the W3C element traversal api is supported. [jddalton]

* unit test: Add Slick XML unit test and fix a bug with JSSpec in Opera 9.64. [jddalton]

* Ensure feature test results return boolean values and make BUGGY_GEBCN test against a string and not a regexp. [jddalton]

* unit test: Add Slick unit tests. [jddalton]

* Add NW.Dom.setQSA(enabled) to allow testing NW.Dom.select() with and without using querySelectorAll(). [jddalton]

* Ensure element.style and element.className exist before attempting to access properties on them. [jddalton]

* Cleanup feature tests making them more consistent. [jddalton]

* Ensure getElementsByClassName(), getElementById(), getElementsByName(), and getElementsByTagName() exist on elements before calling them. [jddalton]

* Optimize prefiltering in client_api() avoding extra processing if `parts[1]` matches are undefined and allow filtering of selectors containing `:not` again. [jddalton]

* Refine `Optimize.tagName` to match more tagName selectors. [jddalton]

* Ensure native_api() returns an array of results for className selectors instead of nodeLists. [jddalton]

* Remove unnecessary grouping from `strSkipQuotes` and remove the `*` from the end of the `Optimize` regexps. [jddalton] 

* Avoid prefiltering in client_api() if the selector contains `:not` and move the `ID optimization LTR` block under the `ID optimization RTL` block. [jddalton]
